projects/rpa-dashboard/portal/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal-rpa-dashboard
  name: portal-rpa-dashboard
  namespace: rpa-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal-rpa-dashboard
  template:
    metadata:
      labels:
        app: portal-rpa-dashboard
    spec:
      containers:
        - image: <IMAGENAME>:<TAG>
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "200"
              memory: "400Mi"
          imagePullPolicy: Always
          name: portal
      imagePullSecrets:
        - name: registry-regcred
